docs: update JVM flags to ZGC and add server start scripts
Replace G1GC with ZGC generational for sub-ms GC pauses on Java 21+.
Add start-minecraft-server.sh and .ps1 with optimized flags.